Add 5 day forecast

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       <label for="location">Enter a location:</label>
       <input id="location" type="text">
       <button class="btn-success" id="weatherLocation">Get Current Humidity!</button>
-      <button class="btn-success" id="weatherTemp">Get Current Humidity!</button>
+      <button class="btn-success" id="weatherTemp">Get Current temperature</button>
+      <button class="btn-success" id="forecast">Get 5 day forecast</button>
       <div class="showWeather"></div>
     </div>
   </body>
